# openvpn-oh

./: .gitignore  LICENSE  README.md  build-profile.json5  oh-package.json5
.claude/: CLAUDE.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: PATCHES.md  TRAY-TASKBAR.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  async_bridge.cpp  async_bridge.h  log.h  napi_init.cpp  ovpn_client.cpp  ovpn_client.h
entry/src/main/cpp/types/libovpnclient/: index.d.ts  oh-package.json5
entry/src/main/ets/backgroundability/: BackGroundAbility.ets
entry/src/main/ets/components/: ProfileListItem.ets  StatsCard.ets  StatusPill.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/mainability/: MainAbility.ets
entry/src/main/ets/model/: CredentialStore.ets  Profile.ets  ProfileStore.ets  VpnState.ets
entry/src/main/ets/pages/: Blank.ets  ImportConfig.ets  Index.ets  LogView.ets  ProfileDetail.ets  TrayPopup.ets
entry/src/main/ets/service/: CommonEvents.ets  ExtTray.ets  OvpnEngine.ets  TrayService.ets  VpnController.ets  VpnNotification.ets
entry/src/main/ets/statusbarview/: StatusBarViewAbility.ets
entry/src/main/ets/util/: Logger.ets
entry/src/main/ets/vpnability/: OvpnVpnExtensionAbility.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
hvigor/: hvigor-config.json5
scripts/: fetch-third-party.ps1  fetch-third-party.sh
